// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox component The Rendered HTML should have a label 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <textarea
      name="TextArea"
    />
  </label>
</div>
`;

exports[`TextBox component The Rendered HTML should support children 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <textarea
      name="TextArea"
    >
      This is my value
    </textarea>
  </label>
</div>
`;

exports[`TextBox component handling input should set a value when passed in 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <textarea
      name="TextArea"
    >
      My Input Value
    </textarea>
  </label>
</div>
`;

exports[`TextBox component handling input should update a value when changed 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <textarea
      name="TextArea"
    >
      Updated Value
    </textarea>
  </label>
</div>
`;
